tests/fail/invalid_mutually_recursive_function_declaration.tig
let
    function f(b : B) : int = g(b.field)
    type B = {field : int}
    function g(i : int) : int = f(B{field = i})
in
end
