tests/fail/invalid_mutually_recursive_function_declaration.err
Semantic Error: Calling an undefined function f at line 4.
